modif jenkins file add sonar17